--- a/catalog/view/theme/styletour/css/style.css
+++ b/catalog/view/theme/styletour/css/style.css
@@ -5,9 +5,14 @@ body{
 	color: #000;
 	min-width: 320px;
 }
+
 img{
 	max-width: 100%;
 	height: auto;
+}
+
+hr {
+	border-color: #ccc !important;
 }
 h3{
 	font-size: 24px;
@@ -430,6 +435,7 @@ section.menu-carousel{
 	background: #f5f5f5;
 	padding: 45px 0;
 	border-bottom: 1px solid #9e9e9e;
+	margin-top: 15px;
 }
 .bottom-content h3{
 	font-weight: 400;
@@ -506,6 +512,98 @@ section.menu-carousel{
 
 .cats ul{
 	padding-left: 20px;
+}
+
+
+.modal.in .modal-dialog{
+	display: block;
+	position: relative;
+}
+
+body:not(.common-home) .content {
+	padding-top: 15px;
+}
+
+body:not(.common-home) {
+	font-size: 12px;
+}
+
+.thumbnails {
+	overflow: auto;
+	clear: both;
+	list-style: none;
+	padding: 0;
+	margin: 0;
+}
+.thumbnails > li {
+	margin-left: 20px;
+}
+.thumbnails {
+	margin-left: -20px;
+}
+.thumbnails > img {
+	width: 100%;
+}
+.image-additional a {
+	margin-bottom: 20px;
+	padding: 5px;
+	display: block;
+	border: 1px solid #ddd;
+}
+.image-additional {
+	max-width: 78px;
+}
+.thumbnails .image-additional {
+	float: left;
+	margin-left: 20px;
+}
+
+.products-tab {
+	border: 1px solid #ccc;
+	border-radius: 4px;
+	margin: 15px 0;
+	padding: 10px;
+}
+
+.tab-content {
+	padding: 5px 0;
+}
+
+.price-old {
+	font-size: 11px;
+	text-decoration: line-through;
+	color: #ccc;
+}
+
+
+.product-img img {
+	max-height: 200px;
+}
+
+
+.product-list  .product {
+	height: auto;
+	text-align: left;
+}
+
+.product-list  .product-img {
+	display: inline-block;
+	width: auto;
+	float: left;
+	margin-right: 10px;
+}
+
+.product-list  .product-desc {
+	max-height: none;
+}
+
+
+.pagination {
+	margin: 0;
+}
+
+.results {
+	line-height: 30px;
 }
 
 /* Large Devices, Wide Screens */
